# TicTacToe

./: CMakeLists.txt  README.md  TicTacToe_en_US.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  mythread.h
